[gd_scene load_steps=11 format=2]

[ext_resource path="res://Pomodoro_Technique_Timer_Interface.gd" type="Script" id=1]
[ext_resource path="res://FRAMD.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ariblk.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://beep test beep.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0.898039, 0.105882, 0.105882, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 150
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 150
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 19
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 0.741
anchor_bottom = 0.535
margin_left = 766.0
margin_top = 245.0
margin_right = 200.216
margin_bottom = -6.00003
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="."]
anchor_right = 0.066
anchor_bottom = 0.133
margin_top = 8.0
margin_right = -35.584
margin_bottom = -51.8
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Break_timer" type="Timer" parent="."]

[node name="Work_timer" type="Timer" parent="."]

[node name="work_time_input_buffer" type="LineEdit" parent="."]
margin_left = 902.0
margin_top = 159.0
margin_right = 960.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="break_time_input_buffer" type="LineEdit" parent="."]
margin_left = 902.0
margin_top = 204.0
margin_right = 960.0
margin_bottom = 228.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="subject_input" type="LineEdit" parent="."]
margin_left = 206.0
margin_top = 540.0
margin_right = 410.0
margin_bottom = 564.0
text = "no subject"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saved_subjects_options" type="OptionButton" parent="."]
margin_left = 380.0
margin_top = 540.0
margin_right = 409.0
margin_bottom = 565.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
clip_text = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 8.0
margin_right = 630.0
margin_bottom = 78.0
rect_scale = Vector2( 1.58035, 2.08609 )
custom_fonts/normal_font = SubResource( 1 )
text = "Pomodoro Technique Timer"

[node name="work_time_label" type="RichTextLabel" parent="."]
margin_left = 763.0
margin_top = 156.0
margin_right = 914.0
margin_bottom = 208.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=red]Work time[/color]"
text = "Work time"
override_selected_font_color = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="break_time_label" type="RichTextLabel" parent="."]
margin_left = 770.0
margin_top = 194.0
margin_right = 921.0
margin_bottom = 246.0
custom_colors/default_color = Color( 1, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=red]Rest time[/color]"
text = "Rest time"
override_selected_font_color = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_timer_displayer" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 326.0
margin_right = 447.0
margin_bottom = 507.0
custom_colors/default_color = Color( 0.207843, 0.627451, 0.294118, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "000"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_timer_displayer_seconds" type="RichTextLabel" parent="."]
margin_left = 466.0
margin_top = 330.0
margin_right = 672.0
margin_bottom = 507.0
custom_colors/default_color = Color( 0.207843, 0.627451, 0.294118, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_status" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 112.0
margin_right = 721.0
margin_bottom = 330.0
custom_fonts/normal_font = SubResource( 4 )
text = "WORK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="beep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="colon" type="RichTextLabel" parent="."]
margin_left = 424.0
margin_top = 315.0
margin_right = 496.0
margin_bottom = 487.0
custom_colors/default_color = Color( 0.207843, 0.627451, 0.294118, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = ":"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_time_overall_label" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 565.0
margin_right = 288.0
margin_bottom = 592.0
custom_fonts/normal_font = SubResource( 5 )
text = "Total time(min):"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_time_overall_value" type="RichTextLabel" parent="."]
margin_left = 262.0
margin_top = 567.0
margin_right = 359.0
margin_bottom = 594.0
custom_fonts/normal_font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_time_overall_label2" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 540.0
margin_right = 206.0
margin_bottom = 567.0
custom_fonts/normal_font = SubResource( 5 )
text = "Subject:"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
[connection signal="timeout" from="Break_timer" to="." method="_on_Break_timer_timeout"]
[connection signal="timeout" from="Work_timer" to="." method="_on_Work_timer_timeout"]
[connection signal="text_changed" from="work_time_input_buffer" to="." method="_on_work_time_input_buffer_text_changed"]
[connection signal="text_changed" from="break_time_input_buffer" to="." method="_on_break_time_input_buffer_text_changed"]
[connection signal="text_entered" from="subject_input" to="." method="_on_subject_input_text_entered"]
[connection signal="item_selected" from="saved_subjects_options" to="." method="_on_saved_subjects_options_item_selected"]
